fix layout of stars on ios (center)

--- a/voxxr-web/web/assets/css/voxxr.less
+++ b/voxxr-web/web/assets/css/voxxr.less
@@ -15,15 +15,15 @@
         padding:    5px;
         margin:     2px auto;
         position:   relative;
-        width:      300px;
+        width:      280px;
         height:     60px;
 
         .star {
             /* background: @color3; /* url('../img/star_empty.png') no-repeat; */
             float:      left;
-            height:     52px;
+            height:     48px;
             margin:     4px;
-            width:      52px;
+            width:      48px;
 
             border: 1px solid #333;
             -webkit-border-radius: 26px;
